# python-mastery

./: .gitignore  cofollow.py  coticker.py  cta_data_analysis.py  descrip.py  follow.py  logcall.py  multitask.py  mutint.py  mymeta.py  orig_stock.py  pcost.py  pyproject.toml  reader.py  readport.py  readrides.py  sample.py  server.py  stock.py  structure.py  tableformat.py  teststock.py  ticker.py  typedproperty.py  validate.py
Practice/: art.py
